<resources>
    <string name="app_name">Text On</string>
    <string name="ex_1234567890">ex: 1234567890</string>
    <string name="write_your_sms_here">Write your sms here....</string>
    <string name="send_the_sms_by_smsmanager">Send the sms by SmsManager</string>
    <string name="send_the_sms_by_sendto">Send the sms by SENDTO</string>
    <string name="send_the_sms_by_view">Send the sms by VIEW</string>
    <string name="complete_the_fields_to_send_a_sms">Complete the fields to send a sms</string>
    <string name="turn_heating_on_off">Turn the heating on / off</string>
    <string name="boost_timer">Boost Timer</string>
    <string name="activate_boost">Activate Boost for 45 mins</string>
    <string name="get_help">Get Help</string>
    <string name="cs">Check Status</string>
    <string name="url">https://drive.google.com/file/d/0BwYraaqEyWO3M3dnV2l4TmhjZ2NCT1ZBWF90LXRUSE1iTlpr/view</string>
    <string name="view_support">Help</string>
    <string name="enter_your_unit_s_phone_number">Enter your unit\'s phone number</string>
    <string name="timeFormat" formatted="false">%d:%02d</string>
    <string name="turn_on_heating_if_below">Turn on when temp is below 10&#xb0;</string>
    <string name="degrees">Degrees</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="terms_url">https://drive.google.com/drive/folders/0BwYraaqEyWO3UHJQa1p6dEk1M1U</string>
    <string name="termsQuestionAlertTitle">Have you read and do you accept the terms and conditions?</string>
    <string name="AlertYes">Yes</string>
    <string name="AlertNo">No</string>
    <string name="tempTextAlert">Temperature Text Alert</string>
    <string name="boost_mode">Boost Mode</string>
    <string name="hint">Hint: Only master user has acccess to all functions. Extra users can only use on /off.</string>
</resources>
